--- a/Unet_model.ipynb
+++ b/Unet_model.ipynb
@@ -343,34 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.keras.layers.Layer.call\n",
-    "class Down_sample(tf.keras.layers.Layer):\n",
-    "    def __int__(self,units):\n",
-    "        \"\"\"\n",
-    "        units,cov2d的filters参数？ 这个参数的主要含义是什么？\n",
-    "        :param units:\n",
-    "        :return:\n",
-    "        \"\"\"\n",
-    "        super(Down_sample,self).__int__()\n",
-    "        self.conv1 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
-    "                                            padding='same')\n",
-    "        self.conv2 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
-    "                                            padding='same')\n",
-    "        self.pool = tf.keras.layers.MaxPooling2D(pool_size=(2,2))\n",
-    "    def call(self,x,is_pool=True):\n",
-    "        '''\n",
-    "        layers类的call方法的重新定义？\n",
-    "        :param x:\n",
-    "        :param is_pool:\n",
-    "        :return:\n",
-    "        '''\n",
-    "        if is_pool:\n",
-    "            x= self.pool(x)\n",
-    "        x = self.conv1(x)\n",
-    "        x = tf.nn.relu(x)\n",
-    "        x = self.conv2(x)\n",
-    "        x = tf.nn.relu(x)\n",
-    "        return x"
+    "tf.keras.layers.Layer.call\n"
    ]
   },
   {
@@ -378,27 +351,7 @@
    "execution_count": 219,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Up_sample(tf.keras.layers.Layer):\n",
-    "    def __int__(self,units):\n",
-    "        super(Up_sample,self).__int__()\n",
-    "        self.conv1 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
-    "                                            padding='same')\n",
-    "        self.conv2 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
-    "                                            padding='same')\n",
-    "        self.deconv = tf.keras.layers.Conv2DTranspose(units//2,\n",
-    "                                                    kernel_size=2,\n",
-    "                                                    strides=2,\n",
-    "                                                    padding='same')\n",
-    "    def call(self,x):\n",
-    "        x = self.conv1(x)\n",
-    "        x = tf.nn.relu(x)\n",
-    "        x = self.conv2(x)\n",
-    "        x = tf.nn.relu(x)\n",
-    "        x = self.deconv(x)\n",
-    "        x = tf.nn.relu(x)\n",
-    "        return x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -406,31 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class myU_net_model(tf.keras.Model):\n",
-    "    \"\"\"\n",
-    "    定义模型，这个模型的父类是来自keras的Model类\n",
-    "    \"\"\"\n",
-    "    def __int__(self):\n",
-    "        super(myU_net_model,self).__init__()\n",
-    "        self.down_sample_I = Down_sample(64)\n",
-    "        self.down_sample_II = Down_sample(128)\n",
-    "        self.down_sample_III = Down_sample(256)\n",
-    "        self.down_sample_IV = Down_sample(512)\n",
-    "        self.down_sample_V = Down_sample(1024)\n",
-    "        \n",
-    "        self.up_sample=tf.keras.layers.Conv2DTranspose(512,\n",
-    "                                                kernel_size=2,\n",
-    "                                                strides=2,\n",
-    "                                                padding='same')\n",
-    "        \n",
-    "        self.up_sample_I = Up_sample(512)\n",
-    "        self.up_sample_II = Up_sample(256)\n",
-    "        self.up_sample_III = Up_sample(128)\n",
-    "        \n",
-    "        self.conv_last = Down_sample(64)\n",
-    "        self.last = tf.keras.layers.Conv2D(2,\n",
-    "                                           kernel_size=1,\n",
-    "                                           padding='same')\n",
+    "\n",
     "        \n",
     "    def call(self,x):\n",
     "        x1 = self.down_sample_I(x,is_pool=False)\n",
