--- a/Unet_model.ipynb
+++ b/Unet_model.ipynb
@@ -22,9 +22,7 @@
    },
    "source": [
     "\n",
-    "#创建dataser\n",
-    "\n",
-    "\n"
+    "创建dataser"
    ]
   },
   {
@@ -44,9 +42,9 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "3*5\n"
+    "images_train = glob.glob(r'D:\\model\\CT_data\\train\\imgs\\*.png')\n",
+    "masks_train = glob.glob(r'D:\\model\\CT_data\\train\\masks\\*.png')\n",
+    "train_count = len(images_train)"
    ]
   },
   {
@@ -67,12 +65,7 @@
     }
    ],
    "source": [
-    "for i, m in dataset_train.take(1):\n",
-    "    plt.subplot(1,2,1)\n",
-    "    plt.imshow((i.numpy()+1)/2)\n",
-    "    plt.subplot(1,2,2)\n",
-    "    plt.imshow(np.squeeze(m.numpy()))\n",
-    "    plt.imshow(m.numpy())\n"
+    "index = np.random.permutation(train_count)"
    ]
   },
   {
@@ -81,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_train = dataset_train.cache().repeat().shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(auto)\n",
-    "dataset_test = dataset_test.cache().batch(BATCH_SIZE)"
+    "images_train = np.array(images_train)[index]\n",
+    "masks_train = np.array(masks_train)[index]"
    ]
   },
   {
@@ -102,7 +95,9 @@
     }
    ],
    "source": [
-    "dataset_train"
+    "images_test = glob.glob(r'D:\\model\\CT_data\\valid\\imgs\\*.png')\n",
+    "masks_test = glob.glob(r'D:\\model\\CT_data\\valid\\masks\\*.png')\n",
+    "test_count = len(images_test)"
    ]
   },
   {
@@ -122,15 +117,21 @@
     }
    ],
    "source": [
-    "dataset_test"
+    "dataset_train = tf.data.Dataset.from_tensor_slices((images_train,masks_train))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "source": [
-    "u-net模型"
-   ]
+    "dataset_test = tf.data.Dataset.from_tensor_slices((images_test,masks_test))"
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -138,7 +139,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.keras.layers.Layer.call\n"
+    "def read_images_png(path):\n",
+    "    img = tf.io.read_file(path)\n",
+    "    img = tf.image.decode_png(img,channels=3)\n",
+    "    return img"
    ]
   },
   {
@@ -146,7 +150,12 @@
    "execution_count": 219,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_masks_png(path):\n",
+    "    img = tf.io.read_file(path)\n",
+    "    img = tf.image.decode_png(img,channels=1)\n",
+    "    return img"
+   ]
   },
   {
    "cell_type": "code",
@@ -154,32 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "        \n",
-    "    def call(self,x):\n",
-    "        x1 = self.down_sample_I(x,is_pool=False)\n",
-    "        x2 = self.down_sample_II(x1)\n",
-    "        x3 = self.down_sample_III(x2)\n",
-    "        x4 = self.down_sample_IV(x3)\n",
-    "        x5 = self.down_sample_V(x4)\n",
-    "        \n",
-    "        x5 = self.up_sample(x5)\n",
-    "        \n",
-    "        x5 = tf.concat([x4,x5])\n",
-    "        x5 = self.up_sample_I(x5)\n",
-    "        \n",
-    "        x5 = tf.concat([x3,x5])\n",
-    "        x5 = self.up_sample_II(x5)\n",
-    "        \n",
-    "        x5 = tf.concat([x2,x5])\n",
-    "        x5 = self.up_sample_III(x5)\n",
-    "        \n",
-    "        x5 = tf.concat([x1,x5])\n",
-    "        \n",
-    "        x5 = self.conv_last(x5,is_pool=False)\n",
-    "        \n",
-    "        x5 = self.last(x5)\n",
-    "        return x5"
+    "img_1 = read_images_png(images_train[0])"
    ]
   },
   {
@@ -188,27 +172,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = myU_net_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MeanIoU(tf.keras.metrics.MeanIoU):\n",
-    "    def __call__(self,y_ture,y_pred,sample_weight=None):\n",
-    "        y_pred = tf.argmax(y_pred,axis=-1)\n",
-    "        return super().__call__(y_ture,y_pred,sample_weight=sample_weight)"
+    "mask_1 = read_masks_png(masks_train[0])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "训练"
+    "\n",
+    "数据增强"
    ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "source": [
+    "def crop_img(img,mask):\n",
+    "    concat_img = tf.concat([img,mask],axis = -1)\n",
+    "    concat_img = tf.image.resize(concat_img,(280,280),\n",
+    "                                method = tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
+    "    crop_img = tf.image.random_crop(concat_img,[256,256,4])\n",
+    "    return crop_img[ :, :, :3], crop_img[ :, :, 3:]"
+   ],
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -216,8 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
-    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
+    "img_1,mask_1 = crop_img(img_1,mask_1)"
    ]
   },
   {
@@ -226,13 +220,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
-    "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_acc')\n",
-    "train_iou = MeanIoU(2,name='tain_iou')\n",
-    "\n",
-    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
-    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_acc')\n",
-    "test_iou = MeanIoU(2,name='test_iou')"
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(img_1.numpy())\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(mask_1.numpy())"
    ]
   },
   {
@@ -241,33 +232,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
-    "def train_step(images,labels):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        predictions = model(images)\n",
-    "        loss = loss(labels,predictions)\n",
-    "    gradients = tape.gradient(loss,model.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
-    "    \n",
-    "    train_loss(loss)\n",
-    "    train_accuracy(labels,predictions)\n",
-    "    train_iou(labels,predictions)"
+    "def normal(img,mask):\n",
+    "    img = tf.cast(img, tf.float32)/127.5 - 1\n",
+    "    mask = tf.cast(mask/255, tf.int32)\n",
+    "    return img, mask"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "@tf.function\n",
-    "def test_step(images,labels):\n",
-    "    predictions= model(images)\n",
-    "    t_loss=loss_object(labels,predictions)\n",
-    "    test_loss(t_loss)\n",
-    "    \n",
-    "    test_accuracy(labels,predictions)\n",
-    "    test_iou(labels,predictions)  "
+    "\n",
+    "加载图片"
    ]
   },
   {
@@ -297,6 +277,377 @@
     }
    ],
    "source": [
+    "def load_train_image(img_path,mask_path):\n",
+    "    img = read_images_png(img_path)\n",
+    "    mask = read_masks_png(mask_path)\n",
+    "    img,mask = crop_img(img,mask)\n",
+    "    if tf.random.uniform(()) > 0.5:\n",
+    "        img = tf.image.flip_left_right(img)\n",
+    "        mask = tf.image.flip_left_right(mask)\n",
+    "    img_f32,mask_int32 = normal(img,mask)\n",
+    "    return img_f32,mask_int32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_test_image(img_path,mask_path):\n",
+    "    img = read_images_png(img_path)\n",
+    "    mask = read_masks_png(mask_path)\n",
+    "    img = tf.image.resize(img,(256,256))\n",
+    "    mask = tf.image.resize(mask,(256,256))\n",
+    "    img_f32,mask_int32 = normal(img,mask)\n",
+    "    return img_f32,mask_int32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 5\n",
+    "BUFFER_SIZE = 10\n",
+    "step_per_epoch = train_count//BATCH_SIZE\n",
+    "test_step = test_count//BATCH_SIZE\n",
+    "auto = tf.data.experimental.AUTOTUNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dataset_train = dataset_train.map(load_train_image,num_parallel_calls = auto)\n",
+    "dataset_test = dataset_test.map(load_test_image,num_parallel_calls = auto)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for i, m in dataset_train.take(1):\n",
+    "    plt.subplot(1,2,1)\n",
+    "    plt.imshow((i.numpy()+1)/2)\n",
+    "    plt.subplot(1,2,2)\n",
+    "    plt.imshow(np.squeeze(m.numpy()))\n",
+    "    plt.imshow(m.numpy())\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dataset_train = dataset_train.cache().repeat().shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(auto)\n",
+    "dataset_test = dataset_test.cache().batch(BATCH_SIZE)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dataset_train"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dataset_test"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "u-net模型"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Down_sample(tf.keras.layers.Layer):\n",
+    "    def __int__(self,units):\n",
+    "        super(Down_sample,self).__int__()\n",
+    "        self.conv1 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
+    "                                            padding='same')\n",
+    "        self.conv2 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
+    "                                            padding='same')\n",
+    "        self.pool = tf.keras.layers.MaxPooling2D(pool_size=(2,2))\n",
+    "    def call(self,x,is_pool=True):\n",
+    "        if is_pool:\n",
+    "            x= self.pool(x)\n",
+    "        x = self.conv1(x)\n",
+    "        x = tf.nn.relu(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = tf.nn.relu(x)\n",
+    "        return x\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Up_sample(tf.keras.layers.Layer):\n",
+    "    def __int__(self,units):\n",
+    "        super(Up_sample,self).__int__()\n",
+    "        self.conv1 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
+    "                                            padding='same')\n",
+    "        self.conv2 = tf.keras.layers.Conv2D(units,kernel_size=3,\n",
+    "                                            padding='same')\n",
+    "        self.deconv = tf.keras.layers.Conv2DTranspose(units//2,\n",
+    "                                                    kernel_size=2,\n",
+    "                                                    strides=2,\n",
+    "                                                    padding='same')\n",
+    "    def call(self,x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = tf.nn.relu(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = tf.nn.relu(x)\n",
+    "        x = self.deconv(x)\n",
+    "        x = tf.nn.relu(x)\n",
+    "        return x"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class myU_net_model(tf.keras.Model):\n",
+    "    def __int__(self):\n",
+    "        super(Unet_model,self).__init__()\n",
+    "        self.down_sample_I = Down_sample(64)\n",
+    "        self.down_sample_II = Down_sample(128)\n",
+    "        self.down_sample_III = Down_sample(256)\n",
+    "        self.down_sample_IV = Down_sample(512)\n",
+    "        self.down_sample_V = Down_sample(1024)\n",
+    "\n",
+    "        self.up_sample=tf.keras.layers.Conv2DTranspose(512,\n",
+    "                                                kernel_size=2,\n",
+    "                                                strides=2,\n",
+    "                                                padding='same')\n",
+    "\n",
+    "        self.up_sample_I = Up_sample(512)\n",
+    "        self.up_sample_II = Up_sample(256)\n",
+    "        self.up_sample_III = Up_sample(128)\n",
+    "\n",
+    "        self.conv_last = Down_sample(64)\n",
+    "        self.last = tf.keras.layers.Conv2D(2,\n",
+    "                                           kernel_size=1,\n",
+    "                                           padding='same')\n",
+    "\n",
+    "    def call(self,x):\n",
+    "        x1 = self.down_sample_I(x,is_pool=False)\n",
+    "        x2 = self.down_sample_II(x1)\n",
+    "        x3 = self.down_sample_III(x2)\n",
+    "        x4 = self.down_sample_IV(x3)\n",
+    "        x5 = self.down_sample_V(x4)\n",
+    "\n",
+    "        x5 = self.up_sample(x5)\n",
+    "\n",
+    "        x5 = tf.concat([x4,x5])\n",
+    "        x5 = self.up_sample_I(x5)\n",
+    "\n",
+    "        x5 = tf.concat([x3,x5])\n",
+    "        x5 = self.up_sample_II(x5)\n",
+    "\n",
+    "        x5 = tf.concat([x2,x5])\n",
+    "        x5 = self.up_sample_III(x5)\n",
+    "\n",
+    "        x5 = tf.concat([x1,x5])\n",
+    "\n",
+    "        x5 = self.conv_last(x5,is_pool=False)\n",
+    "\n",
+    "        x5 = self.last(x5)\n",
+    "        return x5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = myU_net_model()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MeanIoU(tf.keras.metrics.MeanIoU):\n",
+    "    def __call__(self,y_ture,y_pred,sample_weight=None):\n",
+    "        y_pred = tf.argmax(y_pred,axis=-1)\n",
+    "        return super().__call__(y_ture,y_pred,sample_weight=sample_weight)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "训练"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
+    "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_acc')\n",
+    "train_iou = MeanIoU(2,name='tain_iou')\n",
+    "\n",
+    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
+    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_acc')\n",
+    "test_iou = MeanIoU(2,name='test_iou')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def train_step(images,labels):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        predictions = model(images)\n",
+    "        loss = loss(labels,predictions)\n",
+    "    gradients = tape.gradient(loss,model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
+    "\n",
+    "    train_loss(loss)\n",
+    "    train_accuracy(labels,predictions)\n",
+    "    train_iou(labels,predictions)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def test_step(images,labels):\n",
+    "    predictions= model(images)\n",
+    "    t_loss=loss_object(labels,predictions)\n",
+    "    test_loss(t_loss)\n",
+    "\n",
+    "    test_accuracy(labels,predictions)\n",
+    "    test_iou(labels,predictions)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "EPOCHS = 5\n",
     "for epoch in range(EPOCHS):\n",
     "    train_loss.reset_states()\n",
@@ -305,17 +656,17 @@
     "    test_loss.reset_states()\n",
     "    test_accuracy.reset_states()\n",
     "    test_iou.reset_states()\n",
-    "    \n",
+    "\n",
     "    for images,labels in dataset_train:\n",
     "        train_step(images,labels)\n",
-    "        \n",
+    "\n",
     "    for test_images,test_labels in dataset_val:\n",
     "        train_step(test_images,test_labels)\n",
-    "        \n",
+    "\n",
     "    template ='EPOCH {:.3f}, Loss:{:.3f}, Accuracy: {:.3f},\\\n",
     "               IOU:{:.3f},Test Loss:{:.3f},\\\n",
     "               Test Acurracy:{:.3f},Test IOU:{:.3f}'\n",
-    "    \n",
+    "\n",
     "    print (template.format(epoch+1,\n",
     "                           train_loss.result(),\n",
     "                           train_accuracy.result()*100,\n",
@@ -324,25 +675,25 @@
     "                           test_accuracy.result()*100,\n",
     "                           test_iou.result()\n",
     "                         ))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": [
-    "60*14"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "840/(1+0.55)"
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
