--- a/U.ipynb
+++ b/U.ipynb
@@ -9,15 +9,7 @@
      "name": "#%% import\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi, PyCharm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,10 +20,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__debug__==True"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "class DownsampleLayer(tf.keras.layers.Layer):\n",
+    "    conv1 = tf.keras.layers.Conv2D(64 ,kernel_size=3, padding='same')\n",
+    "    conv2 = tf.keras.layers.Conv2D(64 ,kernel_size=3, padding='same')\n",
+    "    pool = tf.keras.layers.MaxPooling2D(pool_size=(2, 2))\n",
     "    def __int__(self, units):\n",
     "        \"\"\"\n",
     "        units,cov2d的filters参数？ 这个参数的主要含义是什么？\n",
@@ -118,20 +136,14 @@
     "        x5 = self.down_sample_V(x4)\n",
     "        #上采样5层\n",
     "        x5 = self.up_sample(x5)\n",
-    "\n",
     "        x5 = tf.concat([x4,x5])\n",
     "        x5 = self.up_sample_I(x5)\n",
-    "\n",
     "        x5 = tf.concat([x3,x5])\n",
     "        x5 = self.up_sample_II(x5)\n",
-    "\n",
     "        x5 = tf.concat([x2,x5])\n",
     "        x5 = self.up_sample_III(x5)\n",
-    "\n",
     "        x5 = tf.concat([x1,x5])\n",
-    "\n",
     "        x5 = self.conv_last(x5,is_pool=False)\n",
-    "\n",
     "        x5 = self.last(x5)\n",
     "        return x5"
    ],
@@ -227,84 +239,13 @@
     "    img = tf.image.resize(img,(256,256))\n",
     "    mask = tf.image.resize(mask,(256,256))\n",
     "    img_f32,mask_int32 = normal(img,mask)\n",
-    "    return img_f32, mask_int32"
+    "    return img_f32, mask_int32\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% 定义数据预处理函数\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#定义损失函数\n",
-    "class MeanIoU(tf.keras.metrics.MeanIoU):\n",
-    "    def __call__(self,y_ture,y_pred,sample_weight=None):\n",
-    "        y_pred = tf.argmax(y_pred,axis=-1)\n",
-    "        return super().__call__(y_ture,y_pred,sample_weight=sample_weight)\n",
-    "\n",
-    "#定义训练步骤\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
-    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
-    "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_acc')\n",
-    "train_iou = MeanIoU(2,name='tain_iou')\n",
-    "\n",
-    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
-    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_acc')\n",
-    "test_iou = MeanIoU(2,name='test_iou')\n",
-    "\n",
-    "@tf.function\n",
-    "def train_step(images,labels):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        predictions = model(images)\n",
-    "        loss = loss(labels,predictions)\n",
-    "    gradients = tape.gradient(loss,model.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
-    "\n",
-    "    train_loss(loss)\n",
-    "    train_accuracy(labels,predictions)\n",
-    "    train_iou(labels,predictions)\n",
-    "\n",
-    "@tf.function\n",
-    "def test_step(images,labels):\n",
-    "    predictions= model(images)\n",
-    "    t_loss=loss_object(labels,predictions)\n",
-    "    test_loss(t_loss)\n",
-    "\n",
-    "    test_accuracy(labels,predictions)\n",
-    "    test_iou(labels,predictions)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%定义训练过程中使用的函数\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "dataset_train = dataset_train.cache().repeat().shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(auto)\n",
-    "dataset_test = dataset_test.cache().batch(BATCH_SIZE)\n",
-    "\n",
-    "for i, m in dataset_train.take(1):\n",
-    "    plt.subplot(1,2,1)\n",
-    "    plt.imshow((i.numpy()+1)/2)\n",
-    "    plt.subplot(1,2,2)\n",
-    "    plt.imshow(np.squeeze(m.numpy()))\n",
-    "    plt.imshow(m.numpy())\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   },
@@ -327,12 +268,103 @@
     "#test数据集位置\n",
     "images_test_filelist = glob.glob(r'CT_data\\valid\\imgs\\*.png')\n",
     "masks_test_filelist = glob.glob(r'CT_data\\valid\\masks\\*.png')\n",
-    "test_count = len(images_test_filelist)\n"
+    "test_count = len(images_test_filelist)\n",
+    "\n",
+    "#定义训练参数\n",
+    "EPOCHS = 5\n",
+    "BATCH_SIZE = 5\n",
+    "BUFFER_SIZE = 10\n",
+    "step_per_epoch = train_count//BATCH_SIZE\n",
+    "test_step = test_count//BATCH_SIZE\n",
+    "auto = tf.data.experimental.AUTOTUNE\n",
+    "\n",
+    "\"\"\"思路\n",
+    "Step0: 准备要加载的numpy数据\n",
+    "Step1: 使用 tf.data.Dataset.from_tensor_slices() 函数进行加载\n",
+    "Step2: 使用 shuffle() 打乱数据\n",
+    "Step3: 使用 map() 函数进行预处理\n",
+    "Step4: 使用 batch() 函数设置 batch size 值\n",
+    "Step5: 根据需要 使用 repeat() 设置是否循环迭代数据集\n",
+    "\"\"\"\n",
+    "# Step1: 使用 tf.data.Dataset.from_tensor_slices() 函数进行加载\n",
+    "dataset_train = tf.data.Dataset.from_tensor_slices((images_train_filelist,masks_train_filelist)) #step1,4,5\n",
+    "dataset_test = tf.data.Dataset.from_tensor_slices((images_test_filelist,masks_test_filelist))\n",
+    "# Step2: 使用 shuffle() 打乱数据\n",
+    "dataset_train = dataset_train.cache().repeat().shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(auto)\n",
+    "# Step3: 使用 map() 函数进行预处理\n",
+    "dataset_train = dataset_train.map(load_train_image,num_parallel_calls = auto)\n",
+    "dataset_test = dataset_test.map(load_test_image,num_parallel_calls = auto)\n",
+    "# Step4: 使用 batch() 函数设置 batch size 值\n",
+    "dataset_test = dataset_test.cache().batch(BATCH_SIZE)\n",
+    "# Step5: 根据需要 使用 repeat() 设置是否循环迭代数据集\n",
+    "#已经在step1做过了"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%读取数据列表\n"
+     "name": "#%%训练\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-4-3dce8eb68b7a>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0m__debug__\u001B[0m\u001B[1;33m==\u001B[0m\u001B[1;32mTrue\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m     \u001B[1;32mfor\u001B[0m \u001B[0mi\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mm\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mdataset_train\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtake\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m         \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msubplot\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m         \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimshow\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnumpy\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m+\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m/\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m         \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msubplot\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'dataset_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if __debug__==True:\n",
+    "    for i, m in dataset_train.take(1):\n",
+    "        plt.subplot(1,2,1)\n",
+    "        plt.imshow((i.numpy()+1)/2)\n",
+    "        plt.subplot(1,2,2)\n",
+    "        plt.imshow(np.squeeze(m.numpy()))\n",
+    "        plt.imshow(m.numpy())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%测试是否定义成功\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'UnetModel' object has no attribute 'down_sample_I'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-12-5785bc0e5dc3>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mmodel\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mUnetModel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mbuild\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0minput_shape\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m256\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m256\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msummary\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mc:\\work\\unetct\\env\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001B[0m in \u001B[0;36mbuild\u001B[1;34m(self, input_shape)\u001B[0m\n\u001B[0;32m    417\u001B[0m                            'method accepts an `inputs` argument.')\n\u001B[0;32m    418\u001B[0m         \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 419\u001B[1;33m           \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcall\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    420\u001B[0m         \u001B[1;32mexcept\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0merrors\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mInvalidArgumentError\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mTypeError\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    421\u001B[0m           raise ValueError('You cannot build your model by calling `build` '\n",
+      "\u001B[1;32m<ipython-input-5-6c7652e74333>\u001B[0m in \u001B[0;36mcall\u001B[1;34m(self, inputs)\u001B[0m\n\u001B[0;32m     79\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0mcall\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0minputs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     80\u001B[0m         \u001B[1;31m#下采样5层\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 81\u001B[1;33m         \u001B[0mx1\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdown_sample_I\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0minputs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mis_pool\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     82\u001B[0m         \u001B[0mx2\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdown_sample_II\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     83\u001B[0m         \u001B[0mx3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdown_sample_III\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx2\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'UnetModel' object has no attribute 'down_sample_I'"
+     ]
+    }
+   ],
+   "source": [
+    "model = UnetModel()\n",
+    "model.build(input_shape=(256,256,3))\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%训练步骤\n"
     }
    }
   },
@@ -341,22 +373,61 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model = UnetModel()\n",
-    "EPOCHS = 5\n",
+    "#定义损失函数\n",
+    "class MeanIoU(tf.keras.metrics.MeanIoU):\n",
+    "    def __call__(self,y_ture,y_pred,sample_weight=None):\n",
+    "        y_pred = tf.argmax(y_pred,axis=-1)\n",
+    "        return super().__call__(y_ture,y_pred,sample_weight=sample_weight)\n",
+    "\n",
+    "#定义训练步骤\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
+    "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='train_acc')\n",
+    "train_iou = MeanIoU(2,name='train_iou')\n",
+    "\n",
+    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
+    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(name='test_acc')\n",
+    "test_iou = MeanIoU(2,name='test_iou')\n",
+    "\n",
+    "@tf.function\n",
+    "def train_step(images,labels):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        predictions = model(images)\n",
+    "        #需要看看这步有没有问题，这里变量名称定义的有点混乱\n",
+    "        loss = loss(labels,predictions)\n",
+    "    gradients = tape.gradient(loss,model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
+    "\n",
+    "    train_loss(loss)\n",
+    "    train_accuracy(labels,predictions)\n",
+    "    train_iou(labels,predictions)\n",
+    "\n",
+    "@tf.function\n",
+    "def test_step(images,labels):\n",
+    "    predictions= model(images)\n",
+    "    t_loss=loss_object(labels,predictions)\n",
+    "    test_loss(t_loss)\n",
+    "\n",
+    "    test_accuracy(labels,predictions)\n",
+    "    test_iou(labels,predictions)\n",
+    "\n",
+    "\n",
     "for epoch in range(EPOCHS):\n",
+    "    #训练一个epoch的数据\n",
     "    train_loss.reset_states()\n",
     "    train_accuracy.reset_states()\n",
     "    train_iou.reset_states()\n",
     "    test_loss.reset_states()\n",
     "    test_accuracy.reset_states()\n",
     "    test_iou.reset_states()\n",
-    "    \n",
-    "    for images,labels in dataset_train:\n",
+    "    #训练\n",
+    "    for images,labels in dataset_train: #这个应该是一张图片放进去训练吧\n",
     "        train_step(images,labels)\n",
-    "        \n",
+    "    #验证\n",
     "    for test_images,test_labels in dataset_test:\n",
     "        train_step(test_images,test_labels)\n",
-    "        \n",
+    "    #输出\n",
     "    template ='EPOCH {:.3f}, Loss:{:.3f}, Accuracy: {:.3f},\\\n",
     "               IOU:{:.3f},Test Loss:{:.3f},\\\n",
     "               Test Acurracy:{:.3f},Test IOU:{:.3f}'\n",
@@ -374,7 +445,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%训练步骤\n"
+     "name": "#%%定义训练过程中使用的函数\n"
     }
    }
   }
